# CMake-SFML-Template

./: CMakeLists.txt  README.md
GraphicsHelper/: GraphicsHelper.cpp
scripts/: generate_header.py
src/: config.hpp  events.cpp  events.hpp  main.cpp  resource_handler.cpp  resource_handler.hpp
src/Core/: main.cpp
src/Engine/: Engine.hpp
src/Engine/EventHandler/: events.cpp  events.hpp
src/Engine/GraphicsHelper/: GraphicsHelper.cpp  GraphicsHelper.hpp
src/Engine/ResourceHandler/: resource_handler.cpp  resource_handler.hpp
src/Engine/SFMath/: sfMath.cpp  sfMath.hpp
